--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -38,7 +38,7 @@
   "buttons": {
     "OnOff": {
       "pin": 22,
-      "reversed": true,
+      "reversed": false,
       "active": true,
       "is_on_off": true,
       "frequency": {
