--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -49,7 +49,7 @@
     },
     "OnOffRaspi": {
       "pin": 22,
-      "reversed": false,
+      "reversed": true,
       "active": true,
       "is_on_off_raspi": true,
       "frequency": {
