Add and refine analog data processing

--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -2,32 +2,39 @@
   "cycle_time": 0.1,
   "amplifier_pin": 13,
   "mqtt": false,
-  "volume": {
+  "analog": {
+    "frequencies": {
+      "posLangKurzMittel": {
+        "min": 4000,
+        "max": 28000,
+        "on": true,
+        "pin": 3
+      }
+    },
+    "volume": {
     "min": -4000,
     "max": 30000,
-    "formel": true,
+    "formula": true,
     "on": true,
+    "is_volume": true,
     "pin": 1
   },
-  "frequencies": {
-    "posLangKurzMittel": {
-      "min": 4000,
-      "max": 28000,
+    "bass": {
+      "min": 0,
+      "max": 30000,
+      "min_final": -20,
+      "max_final": 20,
       "on": true,
-      "pin": 3
+      "pin": 2
+    },
+    "treble": {
+      "min": 24100,
+      "max": 25900,
+      "min_final": -20,
+      "max_final": 20,
+      "on": true,
+      "pin": 2
     }
-  },
-  "bass": {
-    "min": 0,
-    "max": 30000,
-    "on": true,
-    "pin": 2
-  },
-  "treble": {
-    "min": 24100,
-    "max": 25900,
-    "on": true,
-    "pin": 2
   },
   "button_general": {
     "click_time": 0.5,
@@ -41,6 +48,7 @@
       "reversed": false,
       "active": false,
       "is_on_off": true,
+      "apply_state": 1,
       "frequency": {
         "pos": null,
         "musicList": null
@@ -52,6 +60,7 @@
       "reversed": false,
       "active": true,
       "is_on_off_raspi": true,
+      "apply_state": 1,
       "frequency": {
         "pos": null,
         "musicList": null
@@ -63,6 +72,7 @@
       "reversed": true,
       "active": false,
       "is_change_speaker": true,
+      "apply_state": 1,
       "frequency": {
         "pos": null,
         "musicList": null
@@ -73,6 +83,7 @@
       "pin": 24,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_lang.json"
@@ -83,6 +94,7 @@
       "pin": 26,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_mittel.json"
@@ -93,6 +105,7 @@
       "pin": 21,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_kurz_2.json"
@@ -103,6 +116,7 @@
       "pin": 20,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ukw.json"
@@ -113,6 +127,7 @@
       "pin": 19,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_kurz_1.json"
@@ -123,6 +138,7 @@
       "pin": 23,
       "reversed": true,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ta.json"
@@ -133,6 +149,7 @@
       "pin": 17,
       "reversed": true,
       "active": true,
+      "apply_state": 1,
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ta.json"
@@ -143,6 +160,7 @@
       "pin": 4,
       "reversed": false,
       "active": true,
+      "apply_state": 1,
       "is_frequency_lock": true,
       "frequency": {
         "pos": null,
