--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -86,7 +86,10 @@
       "reversed": false,
       "active": false,
       "is_on_off": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 1
+      },
       "frequency": {
         "pos": null,
         "musicList": null
@@ -98,7 +101,10 @@
       "reversed": false,
       "active": true,
       "is_on_off_raspi": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 0
+      },
       "frequency": {
         "pos": null,
         "musicList": null
@@ -110,7 +116,10 @@
       "reversed": true,
       "active": false,
       "is_change_speaker": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 99
+      },
       "frequency": {
         "pos": null,
         "musicList": null
@@ -121,7 +130,10 @@
       "pin": 24,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_lang.json"
@@ -132,7 +144,10 @@
       "pin": 26,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+     "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_mittel.json"
@@ -143,7 +158,10 @@
       "pin": 21,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_kurz_2.json"
@@ -154,7 +172,10 @@
       "pin": 20,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ukw.json"
@@ -165,7 +186,10 @@
       "pin": 19,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_kurz_1.json"
@@ -176,7 +200,10 @@
       "pin": 23,
       "reversed": true,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ta.json"
@@ -187,7 +214,10 @@
       "pin": 17,
       "reversed": true,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 2
+      },
       "frequency": {
         "pos": "posLangKurzMittel",
         "musicList": "freq_ta.json"
@@ -198,7 +228,10 @@
       "pin": 4,
       "reversed": false,
       "active": true,
-      "apply_state": [1],
+      "action": {
+        "apply_state": [1],
+        "type": 3
+      },
       "is_frequency_lock": true,
       "frequency": {
         "pos": null,
