Hold frequency action works

--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -230,7 +230,8 @@
       "active": true,
       "action": {
         "apply_state": [1],
-        "type": 3
+        "type": 3,
+        "holding_pins": [3]
       },
       "is_frequency_lock": true,
       "frequency": {
