Fix audio switcher init

--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -298,7 +298,7 @@
       "action": [
         {
           "apply_state": [5],
-          "action_type": 5,
+          "action_type": 5
         }
       ],
       "frequency": {
