--- a/Radio/react-app/package.json
+++ b/Radio/react-app/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stop": "kill $(lsof -t -i:3000)"
   },
   "eslintConfig": {
     "extends": [
