--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -280,34 +280,34 @@
       },
       "led": 1
     },
-    "Language": {
-      "pin": 13,
-      "reversed": false,
-      "active": true,
-      "action": [
-        {
-          "apply_state": [5],
-          "action_type": 4
-        }
-      ],
-      "frequency": {
-        "pos": "",
-        "musicList": ""
-      },
-      "led": 99
-    },
     "ResetAudioSource": {
       "pin": 6,
       "reversed": false,
       "active": true,
       "action": [
         {
-          "apply_state": [5],
+          "apply_state": [2],
           "action_type": 5
         }
       ],
       "frequency": {
         "pos": "raspberry",
+        "musicList": ""
+      },
+      "led": 99
+    },
+    "RotateAudioSource": {
+      "pin": 13,
+      "reversed": false,
+      "active": true,
+      "action": [
+        {
+          "apply_state": [2],
+          "action_type": 4
+        }
+      ],
+      "frequency": {
+        "pos": "",
         "musicList": ""
       },
       "led": 99
