--- a/Radio/data/settings.json
+++ b/Radio/data/settings.json
@@ -42,8 +42,8 @@
     },
     "sensors": {
       "posLangKurzMittel": {
-        "min": 0,
-        "max": 26000,
+        "min": 19000,
+        "max": 20300,
         "on": true,
         "pin": 0,
         "is_volume": false,
@@ -52,8 +52,8 @@
         "device": "ads_1"
       },
       "volume": {
-        "min": 0,
-        "max": 26000,
+        "min": 14000,
+        "max": 24300,
         "formula": true,
         "on": true,
         "is_volume": true,
@@ -116,9 +116,9 @@
   },
   "buttons": {
     "OnOffMusic": {
-      "pin": 0,
+      "pin": 99,
       "reversed": false,
-      "active": true,
+      "active": false,
       "is_on_off": true,
       "action": [{
         "apply_state": [1],
@@ -131,7 +131,7 @@
       "led": 0
     },
     "OnOffRaspi": {
-      "pin": 22,
+      "pin": 99,
       "reversed": false,
       "active": false,
       "is_on_off_raspi": true,
@@ -146,7 +146,7 @@
       "led": 0
     },
     "changeSpeaker": {
-      "pin": 0,
+      "pin": 99,
       "reversed": false,
       "active": false,
       "is_change_speaker": true,
@@ -163,14 +163,14 @@
     "Lang": {
       "pin": 4,
       "reversed": false,
-      "active": true,
+      "active": false,
       "action": [
         {
-          "apply_state": [1],
+          "apply_state": [0, 6],
           "action_type": 2
         },
         {
-          "apply_state": [0],
+          "apply_state": [1, 5],
           "action_type": 1
         }
       ],
@@ -236,7 +236,7 @@
       ],
       "frequency": {
         "pos": "posLangKurzMittel",
-        "musicList": "freq_ukw.json"
+        "musicList": "freq_kurz_2.json"
       },
       "led": 5
     },
@@ -246,17 +246,13 @@
       "active": true,
       "action": [
         {
-          "apply_state": [1, 5],
+          "apply_state": [2],
           "action_type": 2
-        },
-        {
-          "apply_state": [0, 6],
-          "action_type": 1
         }
       ],
       "frequency": {
         "pos": "posLangKurzMittel",
-        "musicList": "freq_kurz_2.json"
+        "musicList": "freq_ta.json"
       },
       "led": 6
     },
@@ -330,7 +326,7 @@
     }
   },
   "frequency": {
-    "min": 4000,
-    "max": 28000
+    "min": 19000,
+    "max": 20400
   }
 }
