--- a/Radio/react-app/package.json
+++ b/Radio/react-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/traverse": "^7.25.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "eslint-config-react-app": "^7.0.1",
