--- a/PiRadio.service
+++ b/PiRadio.service
@@ -3,13 +3,17 @@ Description=PiRadio
 After=network.target
 
 [Service]
-Type=simple
+Type=forking
 User=USERNAME
-WorkingDirectory=~/Code/PiRadio
-ExecStart=~/Code/PiRadio/radio.sh start
-ExecStop=~/Code/PiRadio/radio.sh stop
-ExecReload=~/Code/PiRadio/radio.sh restart
+WorkingDirectory=PATH_TO_PIRADIO
+Environment=PYTHONPATH=PATH_TO_PIRADIO
+ExecStart=PATH_RO_PPATH_TO_PIRADIOIRADIO/Radio/venv/bin/python -m Radio.daemonMain start --app=0
+ExecStop=PATH_TO_PIRADIO/Radio/venv/bin/python -m Radio.daemonMain stop
+ExecReload=PATH_TO_PIRADIO/Radio/venv/bin/python -m Radio.daemonMain restart --app=0
 Restart=always
+RestartSec=2
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
